# Pdf-Reader

./: LICENSE  README.md  pyproject.toml  read_pdf_v1.py  setup.py
pdf2markdown/: __init__.py  __main__.py  core.py
tests/: test_core.py
