[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "pdf2markdown"
version = "0.1.1"
description = "Robust PDF-to-Markdown extraction for text, mixed-layout, and scanned PDFs"
readme = "README.md"
requires-python = ">=3.8"
license = "MIT"
authors = [
  { name = "pytoni", email = "ptonile@gmail.com" }
]
keywords = ["pdf", "markdown", "ocr", "text-extraction", "pdf-reader"]
classifiers = [
  "Development Status :: 4 - Beta",
  "Intended Audience :: Developers",
  "Operating System :: OS Independent",
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3.8",
  "Programming Language :: Python :: 3.9",
  "Programming Language :: Python :: 3.10",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
  "Topic :: Software Development :: Libraries :: Python Modules",
  "Topic :: Text Processing :: Markup :: Markdown",
]
dependencies = [
  "PyPDF2",
  "pdfplumber",
  "pdf2image",
  "pytesseract",
]

[tool.setuptools]
license-files = ["LICENSE"]

[project.urls]
Homepage = "https://github.com/pytoni/Pdf-Reader"
Repository = "https://github.com/pytoni/Pdf-Reader"
Issues = "https://github.com/pytoni/Pdf-Reader/issues"

[project.scripts]
pdf2markdown = "pdf2markdown.__main__:main"

[tool.setuptools.packages.find]
include = ["pdf2markdown*"]
